# trussed

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  bacon.toml  crates.js  help.html  index.html  main.js  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
aead/: all.html  index.html  sidebar-items.js  struct.Error.html  struct.Payload.html  trait.Aead.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.AeadMut.html  trait.AeadMutInPlace.html  trait.Buffer.html  trait.KeyInit.html  trait.KeySizeUser.html  trait.NewAead.html  type.Key.html  type.Nonce.html  type.Result.html  type.Tag.html
aes/: all.html  constant.BLOCK_SIZE.html  index.html  sidebar-items.js  struct.Aes128.html  struct.Aes128Dec.html  struct.Aes128Enc.html  struct.Aes192.html  struct.Aes192Dec.html  struct.Aes192Enc.html  struct.Aes256.html  struct.Aes256Dec.html  struct.Aes256Enc.html  trait.BlockCipher.html  trait.BlockDecrypt.html  trait.BlockEncrypt.html  trait.NewBlockCipher.html  type.Block.html  type.Block8.html  type.ParBlocks.html
aes_soft/: all.html  index.html  sidebar-items.js  struct.Aes128.html  struct.Aes192.html  struct.Aes256.html  type.Block.html  type.ParBlocks.html
as_slice/: all.html  index.html  trait.AsMutSlice.html  trait.AsSlice.html
asn1derpy/: all.html  enum.Tag.html  index.html  sidebar-items.js  struct.Bytes.html  struct.Der.html  trait.ArrayLength.html
bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
bitvec/: all.html  index.html  macro.bitarr!.html  macro.bitarr.html  macro.bits.html  sidebar-items.js
block_buffer/: all.html  index.html  sidebar-items.js  struct.BlockBuffer.html  struct.Eager.html  struct.Error.html  struct.Lazy.html  trait.BufferKind.html  type.Block.html  type.EagerBuffer.html  type.LazyBuffer.html
block_cipher_trait/: all.html  index.html  sidebar-items.js  struct.InvalidKeyLength.html  trait.BlockCipher.html
block_modes/: all.html  index.html  sidebar-items.js  struct.BlockModeError.html  struct.Cbc.html  struct.Cfb.html  struct.Cfb8.html  struct.Ecb.html  struct.Ige.html  struct.InvalidKeyIvLength.html  struct.Ofb.html  struct.Pcbc.html  trait.BlockMode.html  trait.IvState.html
block_padding/: all.html  enum.AnsiX923.html  enum.Iso7816.html  enum.NoPadding.html  enum.PadType.html  enum.Pkcs7.html  enum.ZeroPadding.html  index.html  sidebar-items.js  struct.AnsiX923.html  struct.Iso10126.html  struct.Iso7816.html  struct.NoPadding.html  struct.PadError.html  struct.Pkcs7.html  struct.UnpadError.html  struct.ZeroPadding.html  trait.Padding.html  trait.RawPadding.html  type.Block.html
byte_tools/: all.html  fn.copy.html  fn.set.html  fn.zero.html  index.html
byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  sidebar-items.js  trait.ByteOrder.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
cbc/: all.html  index.html  sidebar-items.js  struct.Decryptor.html  struct.Encryptor.html
cbor_smol/: all.html  fn.cbor_deserialize.html  fn.cbor_serialize.html  fn.cbor_serialize_bytebuf.html  fn.cbor_serialize_bytes.html  fn.cbor_serialize_extending_bytes.html  fn.cbor_serialize_to.html  index.html  macro.debug.html  macro.debug_now.html  macro.error.html  macro.error_now.html  macro.info.html  macro.info_now.html  macro.log.html  macro.log_now.html  macro.trace.html  macro.trace_now!.html  macro.trace_now.html  macro.try_debug.html  macro.try_debug_now!.html  macro.try_debug_now.html  macro.try_error!.html  macro.try_error.html  macro.try_error_now.html  macro.try_info!.html  macro.try_info.html  macro.try_info_now!.html  macro.try_info_now.html  macro.try_log_now!.html  macro.try_log_now.html  macro.try_trace!.html  macro.try_trace.html  macro.try_trace_now!.html  macro.try_trace_now.html  macro.try_warn.html  macro.try_warn_now.html  macro.warn.html  macro.warn_now.html  sidebar-items.js  (+2 more)
cfg_if/: all.html  index.html  macro.cfg_if.html
chacha20/: all.html  constant.BLOCK_SIZE.html  constant.KEY_SIZE.html  constant.MAX_BLOCKS.html  fn.hchacha.html  index.html  sidebar-items.js  struct.ChaCha.html  struct.ChaCha12Rng.html  struct.ChaCha12RngCore.html  struct.ChaCha20LegacyCore.html  struct.ChaCha20Rng.html  struct.ChaCha20RngCore.html  struct.ChaCha8Rng.html  struct.ChaCha8RngCore.html  struct.ChaChaCore.html  struct.Cipher.html  struct.XChaCha.html  struct.XChaCha20.html  struct.XChaChaCore.html  type.ChaCha12.html  type.ChaCha20.html  type.ChaCha20Legacy.html  type.ChaCha8.html  type.Key.html  type.LegacyNonce.html  type.Nonce.html  type.XChaCha12.html  type.XChaCha20.html  type.XChaCha8.html  type.XNonce.html
chacha20poly1305/: all.html  index.html  sidebar-items.js  struct.ChaCha12Poly1305.html  struct.ChaCha20Poly1305.html  struct.ChaCha8Poly1305.html  struct.ChaChaPoly1305.html  struct.Error.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.KeyInit.html  trait.KeySizeUser.html  type.ChaCha12Poly1305.html  type.ChaCha20Poly1305.html  type.ChaCha8Poly1305.html  type.Key.html  type.Nonce.html  type.Tag.html  type.XChaCha12Poly1305.html  type.XChaCha20Poly1305.html  type.XChaCha8Poly1305.html  type.XNonce.html
cipher/: all.html  index.html  macro.impl_simple_block_encdec.html  sidebar-items.js  struct.InvalidLength.html  struct.OverflowError.html  struct.StreamCipherCoreWrapper.html  struct.StreamCipherError.html  trait.AlgorithmName.html  trait.ArrayLength.html  trait.Counter.html  (+34 more)
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: api.rs  client.rs  config.rs  consts.rs  error.rs  interrupt.rs  lib.rs  mechanisms.rs  serde_extensions.rs  types.rs
core/src/api/: macros.rs
core/src/client/: attestation.rs  certificate.rs  counter.rs  crypto.rs  filesystem.rs  management.rs  mechanisms.rs  ui.rs
derive/: Cargo.toml
derive/examples/: dispatch.rs  extension-dispatch.rs
derive/src/: dispatch.rs  extension_dispatch.rs  extension_id.rs  lib.rs  util.rs
(+83993 files in other folders)
