[workspace]
members = ["derive"]

[workspace.package]
authors = ["Nicolas Stalder <n@stalder.io>", "Nitrokey GmbH"]
edition = "2021"
homepage = "https://trussed.dev"
license = "Apache-2.0 OR MIT"

[package]
name = "trussed"
version = "0.1.0"
repository = "https://github.com/trussed-dev/trussed"
description = "Modern Cryptographic Firmware"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
# general
bitflags = { version = "2.1" }
# const-oid = "0.4.5"
cfg-if = "1.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
generic-array = "0.14.4"
heapless = { version = "0.7", features = ["serde"] }
hex-literal = "0.4.1"
nb = "1"
postcard = "0.7.0"
rand_core = "0.6"
serde = { version = "1.0", default-features = false }
zeroize = { version = "1.2", default-features = false, features = ["zeroize_derive"] }
rand_chacha = { version = "0.3.1", default-features = false }

# RustCrypto
aes = { version = "0.8", default-features = false }
cbc = "0.1.2"
blake2 = { version = "0.10", default-features = false, optional = true }
chacha20 = { version = "0.9", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["heapless", "reduced-round"] }
des = { version = "0.8", optional = true }
hmac = "0.12"
sha-1 = { version = "0.10", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false }

# ours
cosey = "0.3"
delog = "0.1.0"
cbor-smol = { version = "0.5", features = ["heapless-bytes-v0-3"] }
heapless-bytes = { version = "0.3.0" }
interchange = "0.3.0"
littlefs2 = "0.5.0"
littlefs2-core = { version = "0.1", features = ["heapless-bytes03"] }
p256-cortex-m4 = { version = "0.1.0-alpha.6", features = ["prehash", "sec1-signatures"] }
salty = { version = "0.3.0", features = ["cose"] }
serde-indexed = "0.1.0"
p384 = { version = "0.13.0", optional = true, default-features = false, features = ["sha384", "ecdh", "ecdsa"] }
p521 = { version = "0.13.3", optional = true, default-features = false, features = ["sha512", "ecdh", "ecdsa"] }
ecdsa = { version = "0.16.9", optional = true, default-features = false }

[dev-dependencies]
# Testing
serial_test = { version = "2" }
entropy = "0.4.0"
once_cell = "1.13.0"
serde_test = "1"
trussed-derive = { path = "derive" }
# Somehow, this is causing a regression.
# rand_core = { version = "0.5", features = ["getrandom"] }

[features]
default = ["default-mechanisms", "default-syscalls", "clients-5"]
serde-extensions = []
std = []
verbose-tests = ["littlefs2/ll-assertions"]
verbose-lfs = ["littlefs2/ll-assertions", "littlefs2/ll-trace"]
virt = ["std"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

# mechanisms
default-mechanisms = [
    "aes256-cbc",
    "chacha8-poly1305",
    "ed255",
    "x255",
    # "hmac-blake2s",
    "hmac-sha1",
    "hmac-sha256",
	# For some reason, this breaks Solo 2 firmware
	# At minimum, this seems to have a huge "block" method
    # "hmac-sha512",
    "p256",
    "sha256",
    "tdes",
    "totp",
    "trng",
]
aes256-cbc = []
chacha8-poly1305 = []
ed255 = []
x255 = []
hmac-blake2s = ["blake2"]
hmac-sha1 = []
hmac-sha256 = []
hmac-sha512 = []
p256 = []
p384 = ["dep:p384"]
p521 = ["dep:p521", "dep:ecdsa"]
sha256 = []
tdes = ["des"]
totp = ["sha-1"]
trng = ["sha-1"]

# syscalls
default-syscalls = ["counter-client", "crypto-client-attest"]
counter-client = []
crypto-client-attest = []

clients-1 = []
clients-2 = []
clients-3 = []
clients-4 = []
clients-5 = []
clients-6 = []
clients-7 = []
clients-8 = []
clients-9 = []
clients-10 = []
clients-11 = []
clients-12 = []

test-attestation-cert-ids = []
# [patch.crates-io]
# interchange = { git = "https://github.com/trussed-dev/interchange", branch = "main" }

[package.metadata.docs.rs]
features = ["serde-extensions", "virt"]
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", branch = "release-0.5.0" }
littlefs2-core = { git = "https://github.com/trussed-dev/littlefs2.git", branch = "release-0.5.0" }
