[workspace]
members = ["core", "derive"]

[workspace.package]
authors = ["The Trussed developers", "Nicolas Stalder <n@stalder.io>", "Nitrokey GmbH"]
edition = "2021"
homepage = "https://trussed.dev"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/trussed-dev/trussed"

[workspace.dependencies]
heapless-bytes = "0.3"
littlefs2-core = { version = "0.1", features = ["serde"] }
postcard = "0.7.0"
rand_core = "0.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[package]
name = "trussed"
version = "0.1.0"
description = "Modern Cryptographic Firmware"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
trussed-core = { version = "0.1", path = "core" }

# general
bitflags = { version = "2.1" }
# const-oid = "0.4.5"
cfg-if = "1.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
generic-array = "0.14.4"
heapless = { version = "0.7", features = ["serde"] }
hex-literal = "0.4.1"
nb = "1"
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
zeroize = { version = "1.2", default-features = false, features = ["zeroize_derive"] }
rand_chacha = { version = "0.3.1", default-features = false }

# RustCrypto
aes = { version = "0.8", default-features = false }
cbc = "0.1.2"
blake2 = { version = "0.10", default-features = false, optional = true }
chacha20 = { version = "0.9", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["heapless", "reduced-round"] }
des = { version = "0.8", optional = true }
hmac = "0.12"
sha-1 = { version = "0.10", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false }

# ours
cosey = "0.3"
delog = "0.1.0"
cbor-smol = { version = "0.5", features = ["heapless-bytes-v0-3"] }
heapless-bytes.workspace = true
interchange = "0.3.0"
littlefs2 = "0.5.0"
littlefs2-core = { workspace = true, features = ["heapless-bytes03"] }
p256-cortex-m4 = { version = "0.1.0-alpha.6", features = ["prehash", "sec1-signatures"] }
salty = { version = "0.3.0", features = ["cose"] }
p384 = { version = "0.13.0", optional = true, default-features = false, features = ["sha384", "ecdh", "ecdsa"] }
p521 = { version = "0.13.3", optional = true, default-features = false, features = ["sha512", "ecdh", "ecdsa"] }
ecdsa = { version = "0.16.9", optional = true, default-features = false }

[dev-dependencies]
# Testing
serial_test = { version = "2" }
entropy = "0.4.0"
once_cell = "1.13.0"
serde_test = "1"
trussed-derive = { path = "derive" }
# Somehow, this is causing a regression.
# rand_core = { version = "0.5", features = ["getrandom"] }

[features]
default = ["all-clients", "default-mechanisms", "clients-5"]
serde-extensions = ["trussed-core/serde-extensions"]
std = []
verbose-tests = ["littlefs2/ll-assertions"]
verbose-lfs = ["littlefs2/ll-assertions", "littlefs2/ll-trace"]
virt = ["std"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

# mechanisms
default-mechanisms = [
    "aes256-cbc",
    "chacha8-poly1305",
    "ed255",
    "x255",
    # "hmac-blake2s",
    "hmac-sha1",
    "hmac-sha256",
	# For some reason, this breaks Solo 2 firmware
	# At minimum, this seems to have a huge "block" method
    # "hmac-sha512",
    "p256",
    "sha256",
    "shared-secret",
    "tdes",
    "totp",
    "trng",
]
aes256-cbc = ["trussed-core/aes256-cbc"]
chacha8-poly1305 = ["trussed-core/chacha8-poly1305"]
ed255 = ["trussed-core/ed255"]
x255 = ["trussed-core/x255"]
hmac-blake2s = ["trussed-core/hmac-blake2s", "blake2"]
hmac-sha1 = ["trussed-core/hmac-sha1", "sha-1"]
hmac-sha256 = ["trussed-core/hmac-sha256"]
hmac-sha512 = ["trussed-core/hmac-sha512"]
p256 = ["trussed-core/p256"]
p384 = ["trussed-core/p384", "dep:p384"]
p521 = ["trussed-core/p521", "dep:p521", "dep:ecdsa"]
sha256 = ["trussed-core/sha256"]
shared-secret = ["trussed-core/shared-secret"]
tdes = ["trussed-core/tdes", "des"]
totp = ["trussed-core/totp", "sha-1"]
trng = ["trussed-core/trng", "sha-1"]

# clients
all-clients = [
  "attestation-client",
  "certificate-client",
  "crypto-client",
  "counter-client",
  "filesystem-client",
  "management-client",
  "ui-client",
]
attestation-client = ["crypto-client", "ed255", "p256", "trussed-core/attestation-client"]
certificate-client = ["trussed-core/certificate-client"]
crypto-client = ["trussed-core/crypto-client"]
counter-client = ["trussed-core/counter-client"]
filesystem-client = ["trussed-core/filesystem-client"]
management-client = ["trussed-core/management-client"]
ui-client = ["trussed-core/ui-client"]

clients-1 = []
clients-2 = []
clients-3 = []
clients-4 = []
clients-5 = []
clients-6 = []
clients-7 = []
clients-8 = []
clients-9 = []
clients-10 = []
clients-11 = []
clients-12 = []

test-attestation-cert-ids = []

[[test]]
name = "aes256cbc"
required-features = ["crypto-client", "default-mechanisms", "virt"]

[[test]]
name = "backends"
required-features = ["filesystem-client", "virt"]

[[test]]
name = "certificate"
required-features = ["certificate-client", "virt"]

[[test]]
name = "counter"
required-features = ["counter-client", "virt"]

[[test]]
name = "filesystem"
required-features = ["crypto-client", "default-mechanisms", "filesystem-client", "virt"]

[[test]]
name = "key_confusion"
required-features = ["crypto-client", "default-mechanisms", "hmac-blake2s", "hmac-sha512", "virt"]

[[test]]
name = "p256"
required-features = ["crypto-client", "default-mechanisms", "virt"]

[[test]]
name = "serde_extensions"
required-features = ["serde-extensions", "virt"]

[[test]]
name = "tdes"
required-features = ["crypto-client", "tdes", "virt"]

[[test]]
name = "virt"
required-features = ["filesystem-client", "management-client", "virt"]

[[test]]
name = "x255"
required-features = ["crypto-client", "default-mechanisms", "virt"]

[package.metadata.docs.rs]
features = ["serde-extensions", "virt"]
rustdoc-args = ["--cfg", "docsrs"]
