[package]
name = "trussed-core"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
heapless-bytes.workspace = true
littlefs2-core.workspace = true
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
serde-indexed = "0.1"

[features]
certificate-client = []
crypto-client = []
counter-client = []
filesystem-client = []
management-client = []
ui-client = []

crypto-client-attest = []
serde-extensions = []
