[package]
name = "trussed-core"
version = "0.1.0"
description = "Core types for the trussed crate"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
heapless-bytes.workspace = true
littlefs2-core.workspace = true
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
serde-indexed = "0.1"

[features]
serde-extensions = []

# client traits
attestation-client = []
certificate-client = []
crypto-client = []
counter-client = []
filesystem-client = []
management-client = []
ui-client = []

# mechanisms
aes256-cbc = []
brainpoolp256r1 = []
brainpoolp384r1 = []
brainpoolp512r1 = []
chacha8-poly1305 = []
ed255 = []
hmac-blake2s = []
hmac-sha1 = []
hmac-sha256 = []
hmac-sha512 = []
p256 = []
p384 = []
p521 = []
rsa2048 = []
rsa3072 = []
rsa4096 = []
secp256k1 = []
sha256 = []
shared-secret = []
tdes = []
totp = []
trng = []
x255 = []

[package.metadata.docs.rs]
all-features = true
