[package]
name = "trussed-derive"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "2.0.53"

[dev-dependencies]
serde = { version = "1.0", default-features = false }
trussed = { path = "..", features = ["serde-extensions", "virt"] }
